Adicionando a Tag de Link e Imagem

--- a/site/pages/To-Do.html
+++ b/site/pages/To-Do.html
@@ -32,7 +32,7 @@
 <h2 class="title">Lista de Afazeres</h2>
 <div class="data">00/00/0000</div>
 <div class="separador"> </div>
-<p><div id="conteudo"><h1>Todo </h1>Lista de coisas que ainda tenho que implementar <br/><br/><h2>MarkDown </h2>Citação: &gt; Quote <br/>Imagem: ![label](url) <br/>Link: [label](url) <br/>Barra: !- <br/>Codigo: `int a = 6` <br/><br/><h2>Implementação </h2>&gt; quando tem dois espaços na mesma linha acaba perdendo o que esta a frente! <br/><br/>&gt; apaga os posts tanto do pc como do servidor <br/>-----nc.delete('filename1', ...) <br/><br/>&gt; Allposts: Aparecer o Ultimo <br/><br/><br/></div>
+<p><div id="conteudo"><h1>Todo </h1>Lista de coisas que ainda tenho que implementar <br/><br/><h2>MarkDown </h2>Citação: &gt; Quote <br/>Imagem: <img src="url"/> <br/>Link: <a href="url">label</a> <br/>Barra: !- <br/>Codigo: `int a = 6` <br/><br/><h2>Implementação </h2>&gt; quando tem dois espaços na mesma linha acaba perdendo o que esta a frente! <br/><br/>&gt; apaga os posts tanto do pc como do servidor <br/>-----nc.delete('filename1', ...) <br/><br/>&gt; Allposts: Aparecer o Ultimo <br/><br/><br/></div>
 <div class="lermais"><a href="../index.html"> Voltar &lt;---</a> </div>
 </p></div>
 </td>
