--- a/site/pages/Testando-MarkDown.html
+++ b/site/pages/Testando-MarkDown.html
@@ -32,7 +32,7 @@
 <h2 class="title">Testando MarkDown</h2>
 <div class="data">08/06/2021</div>
 <div class="separador"> </div>
-<p><div id="conteudo">Testando pela MarkDown <br/>Testando <i>Italico </i>MAIS UMA FRASE LONGA :d <br/><b>Negrito </b>Testando <br/>![label](url) <br/><h1>h1 </h1>Ola a todos :) <br/><h2>h2 </h2><h3>h3 </h3><br/><br/>Outro <i>italico </i>rs mais coisa <br/><br/>Terei que criar um parser? D: <br/><br/>Parece que sim rs; <br/><br/><br/></div>
+<p><div id="conteudo">Testando pela MarkDown <br/>Testando <i>Italico </i>MAIS UMA FRASE LONGA :d <br/><b>Negrito </b>Testando <br/><img src="https://neocities.org/img/heartcat.png"/> <br/><a href="https://www.google.com.br">google</a> <br/>Este é um link dentro de uma frase --&gt; <a href="https://www.google.com.br">google</a> E aqui acaba <br/><h1>h1 </h1>Ola a todos :) <br/><h2>h2 </h2><h3>h3 </h3><br/><br/>Outro <i>italico </i>rs mais coisa <br/><br/>Terei que criar um parser? D: <br/><br/>Parece que sim rs; <br/><br/><br/></div>
 <div class="lermais"><a href="../index.html"> Voltar &lt;---</a> </div>
 </p></div>
 </td>
