Criando Ordenação nas Postagens

--- a/site/pages/Hello-World.html
+++ b/site/pages/Hello-World.html
@@ -21,7 +21,7 @@
 </tr>
 </table>
 <div id="menu">
-<a href="https://jmallone.neocities.org/index.html">home</a> <a href="https://twitter.com/jmallone2">twitter</a> <a href="https://github.com/Jmallone">github</a> <a href="https://www.twitch.tv/jmallone01">twitch</a> </div>
+<a href="https://jmallone.neocities.org/index.html">home</a> <a href="https://twitter.com/jmallone2">twitter</a> <a href="https://github.com/Jmallone">github</a> <a href="https://www.twitch.tv/jmallone01">twitch</a> <a href="http://users3.smartgb.com/g/g.php?a=s&amp;i=g36-32259-94">guestbook</a> </div>
 <table align="center" id="post">
 <tr>
 <td>
