--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
 </tr>
 </table>
 <div id="menu">
-<a href="https://jmallone.neocities.org/index.html">home</a> <a href="https://twitter.com/jmallone2">twitter</a> <a href="https://github.com/Jmallone">github</a> <a href="https://www.twitch.tv/jmallone01">twitch</a> </div>
+<a href="https://jmallone.neocities.org/index.html">home</a> <a href="https://twitter.com/jmallone2">twitter</a> <a href="https://github.com/Jmallone">github</a> <a href="https://www.twitch.tv/jmallone01">twitch</a> <a href="http://users3.smartgb.com/g/g.php?a=s&amp;i=g36-32259-94">guestbook</a> </div>
 <table align="center" id="post">
 <tr>
 <td>
@@ -41,7 +41,7 @@
 <h2 class="title">All Posts</h2>
 <div class="separador"> </div>
 <p>
-<div id="allPosts"><a href="pages/To-Do.html">&gt;&gt;&gt; Lista de Afazeres - 00/00/0000</a><br/><a href="pages/Hello-World.html">&gt;&gt;&gt; Meu primeiro Post - 07/06/2021</a><br/><a href="pages/JogosTextos.html">&gt;&gt;&gt; Eu adoro Jogos de Texto - 11/06/2021</a><br/><a href="pages/Testando-MarkDown.html">&gt;&gt;&gt; Testando MarkDown - 08/06/2021</a><br/><a href="pages/Testando-Html.html">&gt;&gt;&gt; Testando Tags Html - 08/06/2021</a><br/></div>
+<div id="allPosts"><a href="pages/JogosTextos.html">&gt;&gt;&gt; Jogos de Texto - 11/06/2021</a><br/><a href="pages/Testando-MarkDown.html">&gt;&gt;&gt; Testando MarkDown - 08/06/2021</a><br/><a href="pages/Testando-Html.html">&gt;&gt;&gt; Testando Tags Html - 08/06/2021</a><br/><a href="pages/Hello-World.html">&gt;&gt;&gt; Meu primeiro Post - 07/06/2021</a><br/><a href="pages/To-Do.html">&gt;&gt;&gt; Lista de Afazeres - 00/00/0000</a><br/></div>
 <p>
 </p></p></div>
 </td>
