--- a/site/index.html
+++ b/site/index.html
@@ -41,7 +41,7 @@
 <h2 class="title">All Posts</h2>
 <div class="separador"> </div>
 <p>
-<div id="allPosts"><a href="pages/JogosTextos.html">&gt;&gt;&gt; Jogos de Texto - 11/06/2021</a><br/><a href="pages/Testando-MarkDown.html">&gt;&gt;&gt; Testando MarkDown - 08/06/2021</a><br/><a href="pages/Testando-Html.html">&gt;&gt;&gt; Testando Tags Html - 08/06/2021</a><br/><a href="pages/Hello-World.html">&gt;&gt;&gt; Meu primeiro Post - 07/06/2021</a><br/><a href="pages/To-Do.html">&gt;&gt;&gt; Lista de Afazeres - 00/00/0000</a><br/></div>
+<div id="allPosts"><li>11/06/2021: <a href="pages/JogosTextos.html">Jogos de Texto</a></li><br/><li>08/06/2021: <a href="pages/Testando-MarkDown.html">Testando MarkDown</a></li><br/><li>08/06/2021: <a href="pages/Testando-Html.html">Testando Tags Html</a></li><br/><li>07/06/2021: <a href="pages/Hello-World.html">Meu primeiro Post</a></li><br/><li>00/00/0000: <a href="pages/To-Do.html">Lista de Afazeres</a></li><br/></div>
 <p>
 </p></p></div>
 </td>
